...
    //以下几个为自定义的View
    {
        CJSectionDataModel *sectionDataModel = [[CJSectionDataModel alloc] init];
        sectionDataModel.theme = @"自定义的View";
        {
            CJModuleModel *toastModule = [[CJModuleModel alloc] init];
            toastModule.title = @"FlagImage & Title & Message & OK & Cancel";
            //toastModule.classEntry = [UIViewController class];
            [sectionDataModel.values addObject:toastModule];
        }
        {
            CJModuleModel *toastModule = [[CJModuleModel alloc] init];
            toastModule.title = @"FlagImage & Title & Message & OK";
...
            debugViewModule.title = @"Debug appInfo";
            //toastModule.classEntry = [UIViewController class];
            [sectionDataModel.values addObject:debugViewModule];
        }
        {
            CJModuleModel *debugViewModule = [[CJModuleModel alloc] init];
            debugViewModule.title = @"Debug Request(NSDictionary)";
            //toastModule.classEntry = [UIViewController class];
            [sectionDataModel.values addObject:debugViewModule];
        }
        {
            CJModuleModel *debugViewModule = [[CJModuleModel alloc] init];
            debugViewModule.title = @"Debug Model";
...
                             style:UIAlertActionStyleCancel
                           handler:^(UIAlertAction * _Nonnull action) {
                               NSLog(@"取消");
                           }];
    
    UIAlertAction *okAlertAction =
    [UIAlertAction actionWithTitle:NSLocalizedString(@"确认", nil)
                             style:UIAlertActionStyleDefault
                           handler:^(UIAlertAction * _Nonnull action) {
                               NSLog(@"确认");
                           }];
    
    NSArray *alertActions = @[cancelAlertAction, okAlertAction];
...
    CGFloat screenWidth = CGRectGetWidth([[UIScreen mainScreen] bounds]);
    CGSize popupViewSize = CGSizeMake(screenWidth * 0.7, 200);
    UIImage *flagImage = [UIImage imageNamed:@"scan_icon_notice"];
    NSString *title = NSLocalizedString(@"未通过", nil);
    NSString *message = [NSString stringWithFormat:@"上车站点不符，应上车站点：\n【%@】", stationName];
    NSString *cancelButtonTitle = NSLocalizedString(@"我知道了", nil);
    NSString *okButtonTitle = NSLocalizedString(@"允许上车", nil);
    
    __weak typeof(self)weakSelf = self;
    [CJAlert showCJAlertViewWithSize:popupViewSize flagImage:flagImage title:title message:message cancelButtonTitle:cancelButtonTitle okButtonTitle:okButtonTitle cancelHandle:^{
        NSLog(@"点击了取消按钮");
    } okHandle:^{
        NSLog(@"点击了确认按钮");
...
