...
    UINavigationController *homeNavigationController = [[UINavigationController alloc] initWithRootViewController:homeViewController];
    [tabBarController addChildViewController:homeNavigationController];
    
    FoundationHomeViewController *foundationHomeViewController = [[FoundationHomeViewController alloc] init];
    foundationHomeViewController.view.backgroundColor = [UIColor whiteColor];
    foundationHomeViewController.navigationItem.title = NSLocalizedString(@"Foundation首页", nil);
    foundationHomeViewController.tabBarItem.title = NSLocalizedString(@"CJFoundataion", nil);
    foundationHomeViewController.tabBarItem.image = [[UIImage imageNamed:@"icons8-settings"] imageWithRenderingMode:UIImageRenderingModeAlwaysOriginal];
    UINavigationController *foundationHomeNavigationController = [[UINavigationController alloc] initWithRootViewController:foundationHomeViewController];
    [tabBarController addChildViewController:foundationHomeNavigationController];
    
    HelperHomeViewController *helperHomeViewController = [[HelperHomeViewController alloc] init];
    helperHomeViewController.view.backgroundColor = [UIColor whiteColor];
...
    UINavigationController *helperHomeNavigationController = [[UINavigationController alloc] initWithRootViewController:helperHomeViewController];
    [tabBarController addChildViewController:helperHomeNavigationController];
    
    UtilHomeViewController *utilHomeViewController = [[UtilHomeViewController alloc] init];
    utilHomeViewController.view.backgroundColor = [UIColor whiteColor];
    utilHomeViewController.navigationItem.title = NSLocalizedString(@"Util首页", nil);
    utilHomeViewController.tabBarItem.title = NSLocalizedString(@"CJUtil", nil);
    utilHomeViewController.tabBarItem.image = [[UIImage imageNamed:@"icons8-settings"] imageWithRenderingMode:UIImageRenderingModeAlwaysOriginal];
    UINavigationController *utilHomeNavigationController = [[UINavigationController alloc] initWithRootViewController:utilHomeViewController];
    [tabBarController addChildViewController:utilHomeNavigationController];
    
    MoreHomeViewController *moreHomeViewController = [[MoreHomeViewController alloc] init];
    moreHomeViewController.view.backgroundColor = [UIColor whiteColor];
...
