...
            toastUtilModule.title = @"Toast";
            toastUtilModule.classEntry = [ToastViewController class];
            [sectionDataModel.values addObject:toastUtilModule];
        }
        {
            CJModuleModel *alertUtilModule = [[CJModuleModel alloc] init];
            alertUtilModule.title = @"Alert";
            alertUtilModule.classEntry = [AlertViewController class];
            [sectionDataModel.values addObject:alertUtilModule];
        }
        
        [sectionDataModels addObject:sectionDataModel];
    }
...
            deviceInfoModule.title = @"DeviceInfo";
            deviceInfoModule.classEntry = [DeviceInfoViewController class];
            [sectionDataModel.values addObject:deviceInfoModule];
        }
        {
            CJModuleModel *dataUtilModule = [[CJModuleModel alloc] init];
            dataUtilModule.title = @"DataUtil";
            dataUtilModule.classEntry = [DataUtilViewController class];
            [sectionDataModel.values addObject:dataUtilModule];
        }
        {
            CJModuleModel *NSAttributedStringModule = [[CJModuleModel alloc] init];
            NSAttributedStringModule.title = @"数值处理(取整、去尾0等)";
...
